--- a/calculator/src/style.css
+++ b/calculator/src/style.css
@@ -12,12 +12,20 @@ body{
     margin-top: 2rem;
     grid-template-columns: repeat(4,6rem);
     grid-template-rows: minmax(7rem,auto) repeat(5, 6rem);
+    justify-content: center;
 }
 
-.calculator-grid {
-    display: grid;
-    margin-top: 2rem;
-    
+.calculator-grid > button {
+    cursor: pointer;
+    font-size: 2rem;
+    border: 1px solid white;
+    outline: none;
+    background-color: rgba(255, 255, 255, .75);
+}
+
+.calculator-grid > button:hover, 
+.calculator-grid > button:focus {
+    background-color: rgba(255, 255, 255, .9);
 }
 
 .span-two {
@@ -36,11 +44,11 @@ body{
     word-break: break-all;
 }
 
-.output .previous-opperend {
+.output .previous-opperand {
     color: rgbs(255, 255, 255, .75);
 }
 
-.output .current-opperend {
+.output .current-opperand {
     color: white;
     font-size: 2.5rem;
 }
